--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 html, body{
+	line-height: 200%;
 	height: 100vh;
 	font-family: Roboto,sans-serif;
 }
@@ -39,6 +40,9 @@ height: 5vh;
 	filter: alpha(opacity=50); 
 	max-height: 700px; 
 } 
+#carousel a:hover{
+	opacity: 0.8;
+}
 .goldBackground{
 	background-color:#AEA373;
 }
@@ -48,8 +52,6 @@ height: 5vh;
 	/* text-align: center; */
 	color: white;
 	background: black;
-	text-transform: uppercase;	
-	
 }
 
 #page-banner img{
@@ -58,7 +60,7 @@ height: 5vh;
 	min-height: 150px;
 }
 #page-banner a:hover{
-	color: black !important;
+	opacity: 0.8;
 }
 .carousel-caption1 {
     position: absolute;
