--- a/style.css
+++ b/style.css
@@ -79,6 +79,12 @@ nav{
     color: #fff;
     text-align: center;
 }
+#kancelaria:before,#team:before, #offer:before, #contact:before {
+	content: "";
+   display: block;
+   height: 130px;
+   margin: -30px 0 0;
+}
 
 iframe{
 	height: 450px;
