--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@ html, body{
 }
 nav{
 	background: #fff;
+	max-height: 200px;
+}
+
+nav img{
+	max-height: 100px;
 }
 .custom-toggler.navbar-toggler {
     border-color: rgb(174, 163, 115);
@@ -27,10 +32,10 @@ nav{
 .custom-toggler .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(174,163,115, 0.7)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
-.mainNav h1{
+/* .mainNav h1{
 	color: #AEA373;
 	font-weight: 600;
-}
+} */
 .mainNav li a{
 	color:black !important;
 }
